# MobileRobot

./: README.md
Scripts/: install_ros_packages.sh  ros2_install.sh
ScriptsArduino/0_Identificación/: ControlLazoAbierto.py  ControlLazoCerrado.py  firstResponse.npy
ScriptsArduino/0_Identificación/ControlLazoAbierto/: ControlLazoAbierto.ino
ScriptsArduino/0_Identificación/ControlLazoCerrado/: ControlLazoCerrado.ino
ScriptsArduino/1_FinalRobot/FinalDiferencial/: FinalDiferencial.ino
ScriptsESP/0_Encoder/: 0_Encoder.ino
ScriptsESP/1_Pruebas_velocidad/Lectura_velocidad/: Lectura_velocidad.ino
ScriptsESP/2_Identificacion/: Respuesta_en_lazo_abierto.py  firstOrderSystem.py  firstResponse.npy  parametros.txt  pyArduino.py
ScriptsESP/2_Identificacion/Control_lazo_cerrado/: Control_lazo_cerrado.ino
ScriptsESP/2_Identificacion/Respuesta_en_lazo_abierto/: Respuesta_en_lazo_abierto.ino
ScriptsESP/3_FinalRobot/RobotFinal/: RobotFinal.ino
ScriptsESP/4_SeguimientoTrayectorias/: Planificador.py  RobotTrayectoria.py  ValPlanificador.py
arduino/: InstructionsNodeTXAndRX
arduino/simple_encoder_reader/: simple_encoder_reader.ino
arduino/simple_motor_control/: simple_motor_control.ino
difrobot_description/: CMakeLists.txt  package.xml
difrobot_description/launch/: display.launch.py  gazebo.launch.py
difrobot_description/urdf/: difrobot.urdf.xacro  difrobot_gazebo.xacro
difrobot_ws/install/: local_setup.sh  setup.sh
difrobot_ws/src/difrobot_firmware/: CMakeLists.txt
difrobot_ws/src/difrobot_firmware/difrobot_firmware/: simple_serial_transmitter.py
(+19 files in other folders)
